<resources>
    <string name="app_name">NotBored</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="participants">Participants</string>
    <string name="participants_hint">Enter a number of participants…</string>
    <string name="start">Start</string>
    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="terms_conditions">Terms and conditions</string>
    <string name="ipsum_lorem"><![CDATA[Lorem ipsum dolor sit amet consectetur adipiscing elit inceptos ridiculus iaculis,nullam ligula elementum duis tellus maecenas nec fermentum sed dictumlaoreet, taciti donec habitant quam purus ultricies porta posuere sociis. Cubiliasenectus netus integer tempor dignissim viverra nostra tellus scelerisque aliquet,semper penatibus tempus sociosqu class sociis bibendum justo etiam, rutrumaenean et eget pretium volutpat eu dictum dictumst. \n\nPraesent gravida ridiculus cursus luctus maecenas in libero mi interdum, auctorullamcorper eget nam eros condimentum litora tristique erat, fusce rhoncu mauris cras aptent non et ultricies. Iaculis porttitor etiam pulvinar proin fringillad, sem ornare sociosqu ultrices litora himenaeos egestas, eros laoreet maurisleo porta. Nibh interdum facilisis dapibus magnis phasellus tortor fusce nostraquam, ante non elementum himenaeos id hac et hendrerit eros, dui at sollicitudinturpis viverra molestie cras quis.\n\n Dignissim faucibus auctor in vitae porttitor tellus nascetur tempor sociosqu,elementum dis ultricies eu tempus tincidunt lectus posuere, et ac interdumcommodo montes convallis curae facilisis. Vitae diam phasellus litora ad aeneanhimenaeos, magnis malesuada nec metus faucibus, turpis mollis hac lacinialacus. Condimentum dis in sed vel molestie integer, gravida eget volutpatinterdum bibendum scelerisque magnis, penatibus non sollicitudin convallisegestas. Aptent mi ligula conubia justo habitant cubilia tellus curabitur, a nisiinteger non eget vivamus cursus hac, lacus rutrum ridiculus tempor litora nostradis.\n\n Nisl pulvinar taciti tellus diam quam dictum cursus potenti euismod natoquefeugiat mattis ornare tortor, aliquam orci dapibus inceptos id egestas ante viverradonec aptent suscipit nulla. Eget nisl fringilla cras felis maecenas nisi ridiculus idconubia hac primis sem ullamcorper porttitor, rutrum ac sodales ultricesvestibulum cum leo semper fusce porta eu fermentum. Proin nisi suspendisseclass facilisi curabitur quisque, fusce vulputate semper a nulla velit, duis in orcifaucibus turpis. Risus metus magnis aliquam accumsan laoreet congue per,tempus purus et odio senectus sodales vulputate, ligula malesuada dis habitassnullam pellentesque.
  ]]></string>
    <string name="hint_screen">Back to main page</string>
    <string name="random">Random</string>
    <string name="recreational">Recreational</string>
    <string name="price">Price</string>
    <string name="button_hint_screen">Try another</string>
    <string name="generic_message_progress">please wait...</string>
    <string name="agree_terms_and_conditions">I agree to Terms and Conditions</string>
    <string name="accept_terms_and_conditions">Please accept terms and conditions if you wish to continue</string>
    <string name="hint_price">Select a price...</string>
    <string name="shared_prefs">shared_prefs</string>
    <string name="error_greater_than_zero">The number has to be greater than 0.</string>
    <string-array name="price_items">
        <item>Free</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>